--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,15 +1,15 @@
 # links
-- title: “Sustainable concrete bricks production and fire behavior testing”
-  authors: Shewalul, Y. W., Quiroz, N. F., Walls, R.
-  journal: under review in Fire Technology
-  date: 2024
-  doi: 
+- title: "Heat transfer modelling and determination of material properties for sustainable masonry systems containing combustible materials in fire"
+  authors: Shewalul, Y. W., Walls, R.
+  journal: Engineering Structures
+  date: 2025
+  doi: https://doi.org/10.1016/j.engstruct.2025.119630
 
-- title: "Cone calorimeter and thermal analysis of crumb rubber and plastic eco-aggregates for sustainable construction"
+- title: "Thermal analysis and fire property quantification of crumb rubber and plastic eco-aggregates for sustainable construction"
   authors: Shewalul, Y. W., Quiroz, N.F., Walls, R.
-  journal: under review in Construction and Building Materials
+  journal: Fire and Materials
   date: 2024
-  doi: 
+  doi: https://doi.org/10.1002/fam.3259
 
 - title: "Fire behavior of hemp blocks: A biomass-based construction material"
   authors: Shewalul, Y. W., Quiroz, N.F., Streicher, D., Walls, R.
