--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,4 +1,16 @@
 # links
+- title: "Identification of fire-induced failure mechanisms of 3D printed concrete using thermo-mechanical modelling"
+  authors: Pillay, S., Shewalul, Y. W., Walls, R., van der Merwe, J. E.
+  journal: under review in Thermal Science and Engineering Progress
+  date: 2025
+  doi: 
+  
+- title: "Fire performance of sustainable concrete bricks with combustible recycled waste in masonry systems"
+  authors: Shewalul, Y. W., Quiroz, N.F., Walls, R.
+  journal: under review in Journal of Structural Fire Engineering
+  date: 2025
+  doi: 
+
 - title: "Heat transfer modelling and determination of material properties for sustainable masonry systems containing combustible materials in fire"
   authors: Shewalul, Y. W., Walls, R.
   journal: Engineering Structures
