--- a/_config.yml
+++ b/_config.yml
@@ -56,8 +56,7 @@ resume_section_references:      true
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
   resume_github_url:            "https://github.com/yshewalul/portfolio/"
-  resume_twitter_url:           "http://twitter.com/yohannes_ws"
-  #resume_dribbble_url:          "https://dribbble.com/jag"
+  #resume_twitter_url:           "http://twitter.com/yohannes_ws"
   # resume_facebook_url:          "insert Facebook URL here"
   resume_linkedin_url:          "https://www.linkedin.com/in/yshewalul/"
   # resume_instagram_url:         "insert your Instagram URL here"
